--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ hr {
 
 .images {
     position: relative;
+    height: 26rem;
 }
 
 .capa {
@@ -87,7 +88,7 @@ hr {
     top: 50%;
     left: 50%;
     width: 100%;
-    height: 99%;
+    height: 100%;
     opacity: 0;
     transform: translate(-50%, -50%);
     background: hsla(178, 100%, 50%, 0.7);
